--- a/app/design/adminhtml/default/default/template/widget/grid/massaction.phtml
+++ b/app/design/adminhtml/default/default/template/widget/grid/massaction.phtml
@@ -5,81 +5,81 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
 /** @var Mage_Adminhtml_Block_Widget_Grid_Massaction $this */
+$jsObjectName = $this->getJsObjectName();
 ?>
 <div id="<?= $this->getHtmlId() ?>">
-<table cellspacing="0" cellpadding="0" class="massaction">
-<tr>
-    <td><?php if ($this->getUseSelectAll()):?>
-        <a href="#" onclick="return <?= $this->getJsObjectName() ?>.selectAll()"><?= $this->__('Select All') ?></a>
+<div class="massaction">
+    <div>
+    <?php if ($this->getUseSelectAll()):?>
+        <a href="#" onclick="return <?= $jsObjectName ?>.selectAll()"><?= $this->__('Select All') ?></a>
         <span class="separator">|</span>
-        <a href="#" onclick="return <?= $this->getJsObjectName() ?>.unselectAll()"><?= $this->__('Unselect All') ?></a>
+        <a href="#" onclick="return <?= $jsObjectName ?>.unselectAll()"><?= $this->__('Unselect All') ?></a>
         <span class="separator">|</span>
-        <?php endif ?>
-        <a href="#" onclick="return <?= $this->getJsObjectName() ?>.selectVisible()"><?= $this->__('Select Visible') ?></a>
+    <?php endif ?>
+        <a href="#" onclick="return <?= $jsObjectName ?>.selectVisible()"><?= $this->__('Select Visible') ?></a>
         <span class="separator">|</span>
-        <a href="#" onclick="return <?= $this->getJsObjectName() ?>.unselectVisible()"><?= $this->__('Unselect Visible') ?></a>
+        <a href="#" onclick="return <?= $jsObjectName ?>.unselectVisible()"><?= $this->__('Unselect Visible') ?></a>
         <span class="separator">|</span>
         <strong id="<?= $this->getHtmlId() ?>-count">0</strong> <?= $this->__('items selected') ?>
-    </td>
-    <td>
-        <div class="right">
-            <div class="entry-edit">
-                <?php if ($this->getHideFormElement() !== true):?>
-                <form action="" id="<?= $this->getHtmlId() ?>-form" method="post">
-                <?php endif ?>
-                    <?= $this->getBlockHtml('formkey') ?>
-                    <fieldset>
-                        <span class="field-row">
-                            <label for="<?= $this->getHtmlId() ?>-select"><?= $this->__('Actions') ?></label>
-                            <select id="<?= $this->getHtmlId() ?>-select" class="required-entry select absolute-advice local-validation">
-                                <option value=""></option>
-                                <?php foreach($this->getGroupedItems() as $key => $group): ?>
-                                    <?php if ($key === 'default'): ?>
-                                        <?php foreach($group as $_item): ?>
-                                            <option value="<?= $_item->getId() ?>"<?= ($_item->getSelected() ? ' selected="selected"' : '')?>><?= $_item->getLabel() ?></option>
-                                        <?php endforeach ?>
-                                    <?php elseif ($key === 'grouped'): ?>
-                                        <?php foreach($group as $label => $_massGroup): ?>
-                                            <optgroup label="<?= $this->quoteEscape($label) ?>">
-                                                <?php foreach($_massGroup as $_item): ?>
-                                                    <option value="<?= $_item->getId() ?>"<?= ($_item->getSelected() ? ' selected="selected"' : '')?>><?= $_item->getLabel() ?></option>
-                                                <?php endforeach ?>
-                                            </optgroup>
-                                        <?php endforeach ?>
-                                    <?php endif ?>
-                                <?php endforeach ?>
-                            </select>
-                        </span>
-                        <span class="outer-span" id="<?= $this->getHtmlId() ?>-form-hiddens"></span>
-                        <span class="outer-span" id="<?= $this->getHtmlId() ?>-form-additional"></span>
-                        <span class="field-row">
-                            <?= $this->getApplyButtonHtml() ?>
-                        </span>
-                    </fieldset>
-                <?php if ($this->getHideFormElement() !== true):?>
-                </form>
-                <?php endif ?>
-            </div>
+    </div>
 
-            <div class="no-display">
-            <?php foreach($this->getItems() as $_item): ?>
-                <div id="<?= $this->getHtmlId() ?>-item-<?= $_item->getId() ?>-block">
-                    <?= $_item->getAdditionalActionBlockHtml() ?>
-                </div>
+<?php if ($this->getHideFormElement() === true):?>
+    <div>
+<?php else: ?>
+    <form action="" id="<?= $this->getHtmlId() ?>-form" method="post">
+        <?= $this->getBlockHtml('formkey') ?>
+<?php endif ?>
+        <label for="<?= $this->getHtmlId() ?>-select"><?= $this->__('Actions') ?></label>
+        <select id="<?= $this->getHtmlId() ?>-select" class="required-entry select absolute-advice local-validation">
+            <option value=""></option>
+            <?php foreach($this->getGroupedItems() as $key => $group): ?>
+                <?php if ($key === 'default'): ?>
+                    <?php foreach($group as $item): ?>
+                        <?php $selected = $item->getSelected() ?>
+                        <option value="<?= $item->getId() ?>"<?= $selected ? ' selected="selected"' : '' ?>>
+                            <?= $item->getLabel() ?>
+                        </option>
+                    <?php endforeach ?>
+                <?php elseif ($key === 'grouped'): ?>
+                    <?php foreach($group as $label => $massGroup): ?>
+                        <optgroup label="<?= $this->quoteEscape($label) ?>">
+                            <?php foreach($massGroup as $item): ?>
+                                <?php $selected = $item->getSelected() ?>
+                                <option value="<?= $item->getId() ?>"<?= $selected ? ' selected="selected"' : ''?>>
+                                    <?= $item->getLabel() ?>
+                                </option>
+                            <?php endforeach ?>
+                        </optgroup>
+                    <?php endforeach ?>
+                <?php endif ?>
             <?php endforeach ?>
-            </div>
+        </select>
+        <span class="outer-span" id="<?= $this->getHtmlId() ?>-form-hiddens"></span>
+        <span class="outer-span" id="<?= $this->getHtmlId() ?>-form-additional"></span>
+        <?= $this->getApplyButtonHtml() ?>
+<?php if ($this->getHideFormElement() === true):?>
+    </div>
+<?php else: ?>
+    </form>
+<?php endif ?>
+
+    <div class="no-display">
+    <?php foreach($this->getItems() as $item): ?>
+        <div id="<?= $this->getHtmlId() ?>-item-<?= $item->getId() ?>-block">
+            <?= $item->getAdditionalActionBlockHtml() ?>
         </div>
-    </td>
-</tr>
-</table>
-<?php if(!$this->getParentBlock()->canDisplayContainer()): ?>
-<script type="text/javascript">
-    <?= $this->getJsObjectName() ?>.setGridIds('<?= $this->getGridIdsJson() ?>');
+    <?php endforeach ?>
+    </div>
+</div>
+</div>
+
+<?php if (!$this->getParentBlock()->canDisplayContainer()): ?>
+<script>
+    <?= $jsObjectName ?>.setGridIds('<?= $this->getGridIdsJson() ?>');
 </script>
 <?php endif ?>
-</div>
