update wishlist and more

--- a/app/design/frontend/base/default/template/catalog/product/new.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/new.phtml
@@ -52,7 +52,7 @@
                         <?php endif ?>
                         <?php if ($_compareUrl = $this->getAddToCompareUrlCustom($_product, false)) : ?>
                             <li>
-                                <a href="#" class="link-compare" title="<?= $this->__('Add to Compare') ?>"
+                                <a href="#" title="<?= $this->__('Add to Compare') ?>"
                                    onclick="customFormSubmit('<?= $_compareUrl ?>', '<?= $_params ?>', 'post')">
                                     <?= $this->getIconSvg('scale') ?>
                                     <?= $this->__('Add to Compare') ?>
