--- a/app/design/frontend/base/default/template/catalog/product/view/addto.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/view/addto.phtml
@@ -30,7 +30,7 @@
         <?php if ($_compareUrl) : ?>
             <?php $_params = $this->escapeHtml(json_encode(['form_key' => $this->getFormKey()])) ?>
             <li>
-                <a href="#" class="link-compare" title="<?= $this->__('Add to Compare') ?>"
+                <a href="#" title="<?= $this->__('Add to Compare') ?>"
                    onclick="customFormSubmit('<?= $_compareUrl ?>', '<?= $_params ?>', 'post')">
                     <?= $this->getIconSvg('scale') ?>
                     <?= $this->__('Add to Compare') ?>
