--- a/app/design/frontend/base/default/template/email/catalog/product/list.phtml
+++ b/app/design/frontend/base/default/template/email/catalog/product/list.phtml
@@ -177,7 +177,7 @@ $_params = $this->escapeHtml(json_encode(['form_key' => $this->getFormKey()]));
                                     <?php endif ?>
                                     <?php if ($_compareUrl = $this->getAddToCompareUrlCustom($_product, false)) : ?>
                                         <li>
-                                            <a href="#" class="link-compare" title="<?= $this->__('Add to Compare') ?>"
+                                            <a href="#" title="<?= $this->__('Add to Compare') ?>"
                                                onclick="customFormSubmit('<?= $_compareUrl ?>', '<?= $_params ?>', 'post')">
                                                 <?= $this->getIconSvg('scale') ?>
                                                 <?= $this->__('Add to Compare') ?>
