--- a/app/design/frontend/base/default/template/wishlist/item/configure/addto.phtml
+++ b/app/design/frontend/base/default/template/wishlist/item/configure/addto.phtml
@@ -14,13 +14,16 @@
 <?php $_wishlistSubmitUrl = $this->helper('wishlist')->getUpdateUrl($_wishlistItem); ?>
 <ul class="add-to-links">
 <?php if ($this->helper('wishlist')->isAllow()) : ?>
-    <li><a href="<?= $_wishlistSubmitUrl ?>" onclick="productAddToCartForm.submitLight(this, this.href); return false;" class="link-compare"><?= $this->__('Update Wishlist') ?></a></li>
+    <li><a href="<?= $_wishlistSubmitUrl ?>" onclick="productAddToCartForm.submitLight(this, this.href); return false;">
+            <?= $this->getIconSvg('heart') ?>
+            <?= $this->__('Update Wishlist') ?>
+        </a></li>
 <?php endif ?>
 <?php $_product = $this->getProduct(); ?>
 <?php $_compareUrl = $this->helper('catalog/product_compare')->getAddUrlCustom($_product, false); ?>
 <?php if ($_compareUrl) : ?>
     <li>
-        <a href="#" class="link-compare" title="<?= $this->__('Add to Compare') ?>"
+        <a href="#" title="<?= $this->__('Add to Compare') ?>"
            onclick="customFormSubmit(
                    '<?= $_compareUrl ?>',
                    '<?= $this->escapeHtml(json_encode(['form_key' => $this->getFormKey()])) ?>',
