--- a/app/design/adminhtml/default/default/template/widget/instance/edit/layout.phtml
+++ b/app/design/adminhtml/default/default/template/widget/instance/edit/layout.phtml
@@ -75,10 +75,10 @@ var pageGroupTemplate = '<div class="options-box page_group_container" id="page_
             '<p>' +
                 '<input type="text" class="input-text entities" name="widget_instance[{{id}}][<?= $container['name'] ?>][entities]" value="{{<?= $container['name'] ?>_entities}}" readonly="readonly" />&nbsp;' +
                 '<a class="widget-option-chooser" href="javascript:void(0)" onclick="WidgetInstance.displayEntityChooser(\'<?= $container['code'] ?>\', \'<?= $container['name'] ?>_ids_{{id}}\')"  title="<?= $this->helper('core')->jsQuoteEscape(Mage::helper('widget')->__('Open Chooser')) ?>">' +
-                    '<img src="<?= Mage::getDesign()->getSkinUrl('images/rule_chooser_trigger.gif') ?>" class="v-middle" alt="<?= $this->helper('core')->jsQuoteEscape(Mage::helper('widget')->__('Open Chooser')) ?>" />' +
+                    '<?= $this->getIconSvg('layout-grid') ?>' +
                 '</a>&nbsp;' +
                 '<a href="javascript:void(0)" onclick="WidgetInstance.hideEntityChooser(\'<?= $container['name'] ?>_ids_{{id}}\')" title="<?= $this->helper('core')->jsQuoteEscape(Mage::helper('widget')->__('Apply')) ?>">' +
-                    '<img src="<?= Mage::getDesign()->getSkinUrl('images/rule_component_apply.gif') ?>" class="v-middle" alt="<?= $this->helper('core')->jsQuoteEscape(Mage::helper('widget')->__('Apply')) ?>" />' +
+                    '<?= $this->getIconSvg('circle-check', 'filled') ?>' +
                 '</a>' +
             '</p>'+
             '<div class="chooser"></div>'+
